# RAG-Portfolio-Projects

./: .gitignore  LINKEDIN_POST.md  README.md  app.py  main.py  pdf_loader.ipynb  pyproject.toml  requirements.txt  test.txt  typesense.ipynb
data/notebook/: document.ipynb
data/notebook/data/text_files/: RAG_intro.txt
