[project]
name = "rag-portfolio-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.2",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.59.2",
    "typesense>=1.1.1",
]
